<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="nodomain.yeh.newshortcut.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/settingsBannerFont_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_norm"
            android:text="@string/settingsBannerFont"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />

        <include layout="@layout/font_size" />

        <include layout="@layout/font_color" />

        <include layout="@layout/for_settings_preview_text" />

        <ImageView
            android:id="@+id/settingsBreaker1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/half_norm"
            android:layout_marginTop="@dimen/norm_x4"
            android:background="@color/colorPrimary"
            android:contentDescription="@string/images_description" />

        <TextView
            android:id="@+id/customThumbnailAdjust_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_norm"
            android:text="@string/customThumbnailAdjust"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorPrimaryDark" />

        <include layout="@layout/thumbnail_size" />

    </LinearLayout>
</ScrollView>
